--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.7.2
+bleach==6.0.0
 crispy-bootstrap4==2022.1
 Django==4.2.4
 django-crispy-forms==2.0
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.18
 Pillow==10.0.0
+six==1.16.0
 sqlparse==0.4.4
+webencodings==0.5.1
